added "sandbox" identification

--- a/app/index.html
+++ b/app/index.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <title>Oil-Climate Index &mdash; Carnegie Endowment for International Peace</title>
+    <title>Oil-Climate Index Sandbox &mdash; Carnegie Endowment for International Peace</title>
     <meta name="description" content="Explore the true cost of technological advancements across the complete oil supply chain." />
     <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" name="viewport" />
 
     <!-- Open Graph -->
-    <meta property="og:site_name" content="Assessing Global Oils &mdash; Carnegie Endowment for International Peace" />
+    <meta property="og:site_name" content="Oil Climate Index Sandbox &mdash; Carnegie Endowment for International Peace" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="Assessing Global Oils &mdash; Carnegie Endowment for International Peace" />
+    <meta property="og:title" content="Oil Climate Index Sandbox &mdash; Carnegie Endowment for International Peace" />
     <meta property="og:url" content="" />
     <meta property="og:description" content="Explore the true cost of technological advancements across the complete oil supply chain." />
     <meta property="og:image" content="assets/images/meta/" />
@@ -57,7 +57,7 @@
                 <img class="brand-title" src="assets/images/layout/ceip-logo-symbol-neg.svg" width="128" height="128" alt="Carnegie Endowment for International Peace logo" />
               </a>
               <a href="#" title="Oil-Climate Index" data-proofer-ignore>
-                <span class="project-title">Oil-Climate <br>Index</span>
+                <span class="project-title">Oil-Climate Index <br>(Sandbox)</span>
               </a>
             </h1>
             <form class="component-search search-main" autocomplete="off" onsubmit="return false;">
